# tracke.rs

./: .env  .env.docker  .gitignore  CONTRIBUTING.md  Cargo.toml  HELLO_WORLD.md  LICENSE  README.md  diesel.toml  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.docker/: Dockerfile.api  Dockerfile.api.dockerignore  Dockerfile.chef  Dockerfile.models  Dockerfile.models.dockerignore  Dockerfile.planner  Dockerfile.planner.dockerignore  Dockerfile.ui  Dockerfile.ui.dockerignore
.github/workflows/: test-cargo-auditable-action.yml
back-end/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.migrator  README.md
back-end/.cargo/: config.toml
back-end/migrations/2023-03-06-105336_hello/: down.sql  up.sql
back-end/migrations/2023-03-20-182214_task/: up.sql
back-end/src/: docs.rs  error.rs  main.rs  prelude.rs
back-end/src/db/: mod.rs  schema.rs
back-end/src/db/models/: duration.rs  mod.rs  task.rs
back-end/src/services/: hello.rs  mod.rs
front-end/: README.md
tests/: client_credentials.hurl  list.hurl  task.hurl
trackers-api-server/: Cargo.toml  README.md
trackers-api-server/src/: error.rs  main.rs  prelude.rs  query_param.rs
trackers-api-server/src/auth/: layer.rs  mod.rs  scope.rs
trackers-api-server/src/error/: conv.rs  foreign.rs  mod.rs  response_impl.rs  schema_impl.rs  server_err.rs  user_err.rs
trackers-api-server/src/json/: mod.rs
trackers-api-server/src/response/: mod.rs
trackers-api-server/src/services/: authorized_client.rs  hello.rs  list.rs  mod.rs  registration.rs  session.rs  task.rs  tracker.rs  user.rs  view.rs
trackers-models/: Cargo.toml
trackers-models/migrations/2023-03-20-182214_task/: down.sql  up.sql
trackers-models/migrations/2023-04-16-095809_test-user/: down.sql  up.sql
trackers-models/src/: duration.rs  lib.rs  tags.rs  task.rs
trackers-models/src/core/: client_credentials.rs  confirmation_code.rs  mod.rs  registration_req.rs  session.rs  task.rs  tracker.rs  user.rs  view.rs
trackers-models/src/db/: mod.rs  registration_req.rs  schema.rs  task.rs  user.rs  view.rs
trackers-models/src/types/: client_secret.rs  deadline_time.rs  duration.rs  email.rs  list_items.rs  mod.rs  null_or_true.rs  password.rs  string.rs  uuid.rs  view_key_value.rs
trackers-web-ui/: Cargo.toml
trackers-web-ui/src/: app.rs  error_template.rs  fallback.rs  lib.rs  main.rs
trackers-web-ui/src/api/: mod.rs
trackers-web-ui/style/: main.scss
