[workspace]
members = ["trackers-api-server", "trackers-models"]
default-members = ["trackers-api-server"]

[workspace.dependencies]
diesel = { version = "^2.0", default-features = false, features = [
  "postgres_backend",
  "without-deprecated",
  "chrono",
  "uuid",
] }
serde = { version = "^1.0", features = ["derive"] }
uuid = {version = "^1.3", features = ["serde", "fast-rng", "std", "v7"]}
humantime = {version = "^1.0"}
chrono = {version = "^0.4", default-features = false, features = ["std", "serde"]}
schemars = {version = "^0.8", features = ["derive", "chrono", "uuid1"]}
dotenvy = { version = "^0.15"}