[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
local-dev = ["dotenvy"]

[dependencies]
axum = "^0.6"
tokio = { version = "^1", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
utoipa = { version = "^3.0", features = ["axum_extras", "time", "preserve_order"] }
utoipa-swagger-ui = { version = "*", features = ["axum"] }
time = { version = "^0.3", features = [
  "serde",
  "serde-human-readable",
  "macros",
  "formatting",
  "parsing",
] }
anyhow = "^1.0"
diesel = { version = "^2.0", default-features = false, features = [
  "postgres_backend",
  "without-deprecated",
  "time",
] }
diesel-async = { version = "^0.2", features = [
  "postgres",
  "deadpool",
] }
deadpool = { version = "^0.9", features = ["managed"] }
dotenvy = { version = "^0.15", optional = true }
