[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
local-dev = ["dotenvy"]

[dependencies]
axum = "^0.6"
tokio = { version = "^1", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
aide = {version = "^0.10", features = ["macros", "axum", "redoc"]}
schemars = {version = "^0.8", features = ["derive", "chrono", "uuid1"]}
uuid = {version = "^1.3", features = ["serde", "fast-rng", "std", "v7"]}
chrono = {version = "^0.4", default-features = false, features = ["std", "serde"]}
humantime = {version = "^1.0"}
anyhow = "^1.0"
diesel = { version = "^2.0", default-features = false, features = [
  "postgres_backend",
  "without-deprecated",
  "chrono",
  "uuid",
] }
diesel-async = { version = "^0.2", features = [
  "postgres",
  "deadpool",
] }
diesel-derive-newtype = "2.0.0-rc.0"
deadpool = { version = "^0.9", features = ["managed"] }
dotenvy = { version = "^0.15", optional = true }
