[package]
name = "trackers-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
local-dev = ["dotenvy"]

[dependencies]
trackers-models = { path="../trackers-models" }
axum = "^0.6"
tokio = { version = "^1", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
aide = {version = "^0.10", features = ["macros", "axum", "redoc"]}
schemars = {workspace = true, features = ["derive", "chrono", "uuid1"]}
uuid = {workspace = true, features = ["serde", "fast-rng", "std", "v7"]}
chrono = {workspace = true, default-features = false, features = ["std", "serde"]}
humantime = {workspace = true}
anyhow = "^1.0"
diesel = { workspace = true, default-features = false, features = [
  "postgres_backend",
  "without-deprecated",
  "chrono",
  "uuid",
] }
diesel-async = { version = "^0.2", features = [
  "postgres",
  "deadpool",
] }
deadpool = { version = "^0.9", features = ["managed"] }
dotenvy = { workspace = true, optional = true }

