[package]
name = "trackers-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = ["uuid/js"]
diesel = ["dep:diesel"]

[dependencies]
diesel = { workspace = true, default-features = false, optional = true, features = [
  "postgres_backend",
  "without-deprecated",
  "chrono",
  "uuid",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = {version = "^1.0"}
uuid = {workspace = true, features = ["serde", "fast-rng", "std", "v7"]}
humantime = {workspace = true}
chrono = {workspace = true, default-features = false, features = ["std", "serde"]}
schemars = {workspace = true, features = ["derive", "chrono", "uuid1"]}
base62 = {version = "^2.0"}
fast_chemail = {version = "^0.9"}
itertools = "0.10.5"
bcrypt = "0.14.0"
random-string = "1.0.0"
